Make left panel height flexible to avoid overflow (#1169)
* Make overall left menu scrollable

* Make only mid-left panel scrollable

* Update src/styles.scss

* Update src/styles.scss

* Update src/components/LayerUI.tsx

* Remove unused class

* Move the scrolling role to Island

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -266,6 +266,11 @@ button,
   height: 100%;
 }
 
+.App-menu__left {
+  overflow-y: auto;
+  max-height: calc(100vh - 236px);
+}
+
 .ErrorSplash {
   min-height: 100vh;
   padding: 20px 0;
